refactor(executors): executor metrics registration and collection